CM01_05/src/objects/Agenda_Item_Members__c.object
<CustomObject>
    <fields>
        <fullName>Agenda_Item__c</fullName>
        <label>Agenda Item</label>
        <referenceTo>Agenda_Item__c</referenceTo>
        <relationshipLabel>Agenda Item Members</relationshipLabel>
        <relationshipName>Agenda_Item_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agenda_Item_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>duplicate_check__c</fullName>
        <label>Duplicate Check for Agenda Item Members</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Agenda Item Members</label>
    <nameField>
        <displayFormat>AgendaMember-{00000000}</displayFormat>
        <label>Agenda Item Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>BOD_Admin</fullName>
        <active>true</active>
        <label>BOD Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOD_Advisor</fullName>
        <active>true</active>
        <label>BOD Advisor</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOD_Guest</fullName>
        <active>true</active>
        <label>BOD Guest</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOD_Member</fullName>
        <active>true</active>
        <label>BOD Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>BOD_Secretary</fullName>
        <active>true</active>
        <label>BOD Secretary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>